--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.2.1
 colorama==0.4.6
 Django==5.2.5
 django-cors-headers==4.7.0
+django-filter==25.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 joblib==1.5.2
